test/spec_vectors/exports/ok/module_74.wat
(module (memory $a (export "a") 0 1))