test/spec_vectors/exports/fail/module_83.wat
(module (import "spectest" "memory" (memory 1 2)) (export "a" (memory 1)))